hacemos get y post de vuelos
