# routes/users.js
@@ -5,8 +5,21 @@ var router = express.Router();
 router.get('/', async (req, res, next) => {
   try {
     const {Users} = req.db;
+    //lo hemos puesto por qur es un parametro definido en swagger
+    const username= req.query.username;
+
     const users = await Users.findAll();
-    return res.send(users);
+  
+    let filteredUsers=users;
+
+    if(username){
+      filteredUsers=users.filter(u =>{
+        return u.username===username;
+
+      })
+    }
+   // return res.send(users);
+    return res.status(200).send(filteredUsers);
   } catch (err) {
     next(err);
   }
